--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,35 @@ header {
     font-size: 35px;
     height: 60px;
     width: 100%;
-    background-color: gold;
+    /* background-color: gold; */
     color: white;
+    margin-top: 6rem;
+}
+
+.main form{
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid black; */
+}
+
+
+.main input {
+    border: 1px solid black;
+    border-radius: 50px;
+    width: 350px;
+    height: 30px;
+    padding-left: 20px;
+}
+
+.main button {
+    margin-top: 15px;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: 100px;
+    height: 25px;
+    font-size: 15px;
 }
